# sems

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cool/zzy/sems/application/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  barcode.cpp  barcode.h  code_128.h  code_128_constant.h  cpp_log.h  ean_13.cpp  ean_13.h  ean_13_constant.h  native-lib.cpp
app/src/main/java/cool/zzy/sems/application/: OpencvJni.java  SemsApplication.java
app/src/main/java/xyz/zzyitj/iface/: IFaceApplication.java  OpencvJni.java  SemsApplication.java
app/src/main/java/xyz/zzyitj/iface/activity/: BaseActivity.java  LoginActivity.java  MainActivity.java
app/src/main/java/xyz/zzyitj/iface/constant/: Const.java
app/src/main/res/drawable/: check_box_background.xml  ic_check.xml  ic_not_check.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  fragment_barcode.xml  fragment_clock.xml  fragment_login.xml  fragment_main.xml  fragment_register.xml  fragment_setting.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  values.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
intent-rpc-client/: build.gradle
intent-rpc-client/src/main/: AndroidManifest.xml
intent-rpc-common/: build.gradle
intent-rpc-common/src/main/: AndroidManifest.xml
intent-rpc-model/: build.gradle
intent-rpc-model/src/main/: AndroidManifest.xml
intent-rpc-service/: build.gradle
intent-rpc-service/src/main/: AndroidManifest.xml
(+85 files in other folders)
